Set z-index to 2 to preview container to fix resizing handler on max size

--- a/plugins/woocommerce-admin/client/launch-your-store/hub/main-content/pages/site-preview.scss
+++ b/plugins/woocommerce-admin/client/launch-your-store/hub/main-content/pages/site-preview.scss
@@ -60,6 +60,7 @@
 	height: 100vh;
 	width: 100%;
 	position: relative;
+	z-index: 2;
 
 	.launch-store-site__preview-site-iframe {
 		display: block;
@@ -80,8 +81,8 @@
 		z-index: 1;
 		background-color: #fff;
 		opacity: 0.9;
-		height: calc(100% - 32px);
-		width: calc(100% - 16px);
+		height: 100%;
+		width: 100%;
 	}
 
 	.launch-store-preview-layout__canvas {
